# pdbrust

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  citation.cff
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  python-publish.yml  rust.yml
benches/: parsing_benchmark.rs
benchmark_results/: benchmark_report.txt  failures.tsv  timing_histogram.txt
benchmarks/: python_benchmark.py  rust_benchmark.rs
docs/: GETTING_STARTED.md
docs/paper/: .gitignore  pdbrust_paper.tex  reference.bib
examples/: analysis_workflow.rs  async_download_demo.rs  atom_interactive.rs  b_factor_demo.rs  basic_usage.rs  batch_processing.rs  dockq_demo.rs  dockq_detailed_comparison.rs  dockq_validation.rs  filtering_demo.rs  full_pdb_benchmark.rs  geometry_demo.rs  lddt_demo.rs  ligand_quality_demo.rs  rcsb_workflow.rs  read_pdb.rs  rust_benchmark.rs  secondary_structure_demo.rs  selection_demo.rs  validate_new_files.rs  write_pdb.rs
examples/pdb_files/: 5HH6.cif
pdbrust-python/: Cargo.toml  README.md  pyproject.toml
pdbrust-python/examples/: advanced_filtering.py  alphafold_analysis.py  b_factor_analysis.py  basic_usage.py  batch_processing.py  dockq_demo.py  geometry_rmsd.py  lddt_demo.py  ligand_interactions.py  numpy_integration.py  quality_and_summary.py  ramachandran_analysis.py  rcsb_search.py  secondary_structure.py  selection_language.py  writing_files.py
pdbrust-python/python/pdbrust/: __init__.py
pdbrust-python/src/: atom.rs  descriptors.rs  dockq.rs  dssp.rs  error.rs  geometry.rs  inventory.rs  lib.rs  ligand_quality.rs  numpy_support.rs  parsing.rs  quality.rs  rcsb.rs  records.rs  structure.rs  summary.rs
src/: classify.rs  error.rs  guide.rs  inventory.rs  lib.rs  models.rs  read_pdb.rs  utils.rs  write_pdb.rs
src/core/: mmcif.rs  mmcif_converter.rs  mod.rs  pdb.rs
src/descriptors/: alphafold.rs  bfactor.rs  composition.rs  dihedrals.rs  distance.rs  geometry.rs  hbonds.rs  interactions.rs  mod.rs
src/dockq/: chain_mapping.rs  contacts.rs  metrics.rs  mod.rs  sequence_align.rs
src/dssp/: assignment.rs  dihedral.rs  hbond.rs  mod.rs  patterns.rs  types.rs
src/filter/: cleaning.rs  extraction.rs  mod.rs
src/filter/selection/: ast.rs  error.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs
src/geometry/: lddt.rs  mod.rs  rmsd.rs  superposition.rs  transform.rs
src/ligand_quality/: clash.rs  mod.rs  overlap.rs  radii.rs  report.rs
src/parser/: gzip.rs  mod.rs
src/parser/mmcif/: mod.rs  parser.rs
src/parser/pdb/: parser.rs
src/quality/: mod.rs
src/rcsb/: async_download.rs  download.rs  mod.rs  search.rs
src/records/: atom.rs  bonds.rs  chain.rs  conect.rs  mod.rs  model.rs  remark.rs  residue.rs  seqres.rs  ssbond.rs
src/summary/: mod.rs
src/writer/: mod.rs
tests/: alphafold_tests.rs  descriptors_tests.rs  dihedral_tests.rs  dockq_tests.rs  dssp_tests.rs  filter_tests.rs  geometry_tests.rs  hbond_api_tests.rs  interaction_tests.rs  lddt_tests.rs  ligand_quality_tests.rs  mmcif_tests.rs  parsing_tests.rs  property_tests.proptest-regressions  property_tests.rs  quality_tests.rs  rcsb_async_tests.rs  rcsb_tests.rs  selection_tests.rs  summary_tests.rs
