[package]
name = "pdbrust"
version = "0.1.0"
edition = "2021"
authors = ["Hosein Fooaldi <fooladi.hosein@gmail.com>"]
description = "A comprehensive Rust library for parsing and analyzing Protein Data Bank (PDB) files"
documentation = "https://docs.rs/pdbrust"
repository = "https://github.com/hfooladi/pdbrust"
license = "MIT"
keywords = [
    "bioinformatics",
    "protein",
    "pdb",
    "structural-biology",
    "chemistry",
    "molecular-biology",
    "protein-structure",
    "x-ray-crystallography",
    "nuclear-magnetic-resonance",
    "cryo-electron-microscopy"
]
categories = [
    "science",
    "parser-implementations",
    "bioinformatics",
    "chemistry",
    "data-structures",
    "filesystem",
    "text-processing"
]
readme = "README.md"

[dependencies]
thiserror = "1.0"
rayon = { version = "1.8", optional = true }
nalgebra = { version = "0.32", optional = true }
itertools = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.9"
codecov = "0.4"

[features]
default = []
parallel = ["rayon"]
geometry = ["nalgebra"]

[package.metadata]
msrv = "1.70.0"  # Minimum Supported Rust Version
rust-version = "1.70.0"
maintenance = { status = "actively-developed" }
docsrs = { all-features = true }

[[bench]]
name = "parsing_benchmark"
harness = false

[lib]
name = "pdbrust"
path = "src/lib.rs"
