[package]
name = "pdbrust"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Hosein Fooladi <fooladi.hosein@gmail.com>"]
description = "A comprehensive Rust library for parsing and analyzing Protein Data Bank (PDB) files"
documentation = "https://docs.rs/pdbrust"
repository = "https://github.com/hfooladi/pdbrust"
license = "MIT"
keywords = [
    "bioinformatics",
    "protein",
    "pdb",
    "structural-biology",
    "chemistry",
]
categories = [
    "science",
    "parser-implementations",
    "data-structures",
]
readme = "README.md"

[dependencies]
thiserror = "1.0"
rayon = { version = "1.8", optional = true }
nalgebra = { version = "0.32", optional = true }
itertools = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.9"
codecov = "0.4"

[features]
default = []
parallel = ["rayon"]
geometry = ["nalgebra"]
filter = []
descriptors = []
quality = []
summary = ["descriptors", "quality"]
rcsb = ["reqwest", "serde", "serde_json"]
gzip = ["flate2"]
# Convenience feature for all analysis features
analysis = ["filter", "descriptors", "quality", "summary"]
# Full feature set
full = ["parallel", "geometry", "analysis", "rcsb", "gzip"]

[package.metadata]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "parsing_benchmark"
harness = false

[lib]
name = "pdbrust"
path = "src/lib.rs"
