[package]
name = "pdbrust-python"
version = "0.5.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Hosein Fooladi <fooladi.hosein@gmail.com>"]
description = "Python bindings for PDBRust - High-performance PDB/mmCIF parsing and analysis"
license = "MIT"
homepage = "https://github.com/HFooladi/pdbrust"
repository = "https://github.com/HFooladi/pdbrust"
documentation = "https://github.com/HFooladi/pdbrust"
publish = false  # Only publish to PyPI, not crates.io

[lib]
name = "_pdbrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pdbrust = { path = "..", features = ["filter", "descriptors", "quality", "summary", "gzip", "geometry"] }
numpy = { version = "0.22", optional = true }

[features]
default = ["full"]
filter = []
descriptors = []
quality = []
summary = ["descriptors", "quality"]
rcsb = ["pdbrust/rcsb"]
gzip = []
geometry = []
numpy = ["dep:numpy"]
# Core features (work on all platforms including Linux)
core = ["filter", "descriptors", "quality", "summary", "gzip", "geometry", "numpy"]
# Full features (includes RCSB, works on macOS/Windows)
full = ["core", "rcsb"]
