[package]
name = "pdbrust-python"
version = "0.6.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Hosein Fooladi <fooladi.hosein@gmail.com>"]
description = "Python bindings for PDBRust - High-performance PDB/mmCIF parsing and analysis"
license = "MIT"
homepage = "https://github.com/HFooladi/pdbrust"
repository = "https://github.com/HFooladi/pdbrust"
documentation = "https://github.com/HFooladi/pdbrust"
publish = false  # Only publish to PyPI, not crates.io

[lib]
name = "_pdbrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pdbrust = { path = "..", features = ["filter", "descriptors", "quality", "summary", "gzip", "geometry", "dssp"] }
numpy = { version = "0.27", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }

[features]
default = ["full"]
filter = []
descriptors = []
quality = []
summary = ["descriptors", "quality"]
rcsb = ["pdbrust/rcsb"]
rcsb-async = ["rcsb", "pdbrust/rcsb-async", "tokio"]
gzip = []
geometry = []
dssp = []
numpy = ["dep:numpy"]
# Core features (work on all platforms including Linux)
core = ["filter", "descriptors", "quality", "summary", "gzip", "geometry", "dssp", "numpy"]
# Full features (includes RCSB, works on macOS/Windows)
full = ["core", "rcsb", "rcsb-async"]
