[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pdbrust"
version = "0.3.0"
description = "High-performance PDB/mmCIF parsing and analysis library with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["pdb", "protein", "bioinformatics", "structural-biology", "mmcif", "parsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
authors = [
    {name = "Hosein Fooladi", email = "fooladi.hosein@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/HFooladi/pdbrust"
Documentation = "https://docs.rs/pdbrust"
Repository = "https://github.com/HFooladi/pdbrust"

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module", "full"]
python-source = "python"
module-name = "pdbrust._pdbrust"
include = ["src/**/*", "Cargo.toml", "README.md", "python/**/*"]
exclude = ["../README.md"]
